--- a/src/component/PersonalDetails/PersonalDetails.css
+++ b/src/component/PersonalDetails/PersonalDetails.css
@@ -26,12 +26,14 @@
   font-size: 12px;
   margin-top: 5px;
 }
-
+/* meaningful names */
 .nxt{
    height: 40px;
    background-color: lightcyan;
    border-color: aliceblue;
    width: auto;
 }
+
+/* maintain the order of stylings */
 
 
